debathena-alpine-config (1.5) unstable; urgency=low

  * Depend on alpine instead of only recommending it.
  * Revert 1.4; this is being handled upstream.

 -- Evan Broder <broder@mit.edu>  Fri, 13 Mar 2009 23:51:38 -0400

debathena-alpine-config (1.4) unstable; urgency=low

  * Set the default spell checking program to `aspell -c`.

 -- Geoffrey Thomas <geofft@mit.edu>  Tue, 10 Mar 2009 21:37:53 -0400

debathena-alpine-config (1.3) unstable; urgency=low

  * Remove DEB_AUTO_UPDATE_DEBIAN_CONTROL.
  * Change "Debian-Athena Project" to "Debathena Project".
  * Remove debian/control from version control.
  * Clean up debian/copyright.

 -- Tim Abbott <tabbott@mit.edu>  Sat, 24 Jan 2009 17:06:15 -0500

debathena-alpine-config (1.2) unstable; urgency=low

  * Use config-package-dev

 -- Evan Broder <broder@mit.edu>  Sat, 29 Nov 2008 12:36:43 -0500

debathena-alpine-config (1.1) unstable; urgency=low

  * Pull in alpine; recommend the debathenified version.

 -- Greg Hudson <ghudson@mit.edu>  Wed, 16 Jul 2008 15:30:59 -0400

debathena-alpine-config (1.0) unstable; urgency=low

  * Initial release.

 -- Greg Hudson <ghudson@mit.edu>  Fri, 11 Jul 2008 13:50:49 -0400