@@ -1,1 +1,0 @@
-debian/pine.conf.debathena etc
