@@ -1,537 +1,0 @@
-#      /etc/pine.conf -- system wide pine configuration
-#
-# Values here affect all pine users unless they've overridden the values
-# in their .pinerc files.  A copy of this file with current comments may
-# be obtained by running "pine -conf". It will be printed to standard output.
-#
-# For a variable to be unset its value must be null/blank.  This is not the
-# same as the value of "empty string", which can be used to effectively
-# "unset" a variable that has a default or previously assigned value.
-# To set a variable to the empty string its value should be "".
-# Switch variables are set to either "yes" or "no", and default to "no".
-# Except for feature-list items, which are additive, values set in the
-# .pinerc file replace those in pine.conf, and those in pine.conf.fixed
-# over-ride all others.  Features can be over-ridden in .pinerc or
-# pine.conf.fixed by pre-pending the feature name with "no-".
-#
-# (These comments are automatically inserted.)
-
-# Over-rides your full name from Unix password file. Required for PC-Pine.
-personal-name=
-
-# Sets domain part of From: and local addresses in outgoing mail.
-user-domain=mit.edu
-
-# List of SMTP servers for sending mail. If blank: Unix Pine uses sendmail.
-smtp-server=
-
-# NNTP server for posting news. Also sets news-collections for news reading.
-nntp-server=news.mit.edu
-
-# Path of (local or remote) INBOX, e.g. ={mail.somewhere.edu}inbox
-# Normal Unix default is the local INBOX (usually /var/mail/$USER).
-inbox-path={mit.edu/hesiod/imap}INBOX
-
-# List of folder pairs; the first indicates a folder to archive, and the
-# second indicates the folder read messages in the first should
-# be moved to.
-incoming-archive-folders=
-
-# List of folders, assumed to be in first folder collection,
-# offered for pruning each month.  For example: mumble
-pruned-folders=
-
-# Over-rides default path for sent-mail folder, e.g. =old-mail (using first
-# folder collection dir) or ={host2}sent-mail or ="" (to suppress saving).
-# Default: sent-mail (Unix) or SENTMAIL.MTX (PC) in default folder collection.
-default-fcc=
-
-# Over-rides default path for saved-msg folder, e.g. =saved-messages (using 1st
-# folder collection dir) or ={host2}saved-mail or ="" (to suppress saving).
-# Default: saved-messages (Unix) or SAVEMAIL.MTX (PC) in default collection.
-default-saved-msg-folder=
-
-# Over-rides default path for postponed messages folder, e.g. =pm (which uses
-# first folder collection dir) or ={host4}pm (using home dir on host4).
-# Default: postponed-msgs (Unix) or POSTPOND.MTX (PC) in default fldr coltn.
-postponed-folder=
-
-# If set, specifies where already-read messages will be moved upon quitting.
-read-message-folder=
-
-# If set, specifies where form letters should be stored.
-form-letter-folder=
-
-# Contains the actual signature contents as opposed to the signature filename.
-# If defined, this overrides the signature-file. Default is undefined.
-literal-signature=
-
-# Over-rides default path for signature file. Default is ~/.signature
-signature-file=
-
-# List of features; see Pine's Setup/options menu for the current set.
-# e.g. feature-list= select-without-confirm, signature-at-bottom
-# Default condition for all of the features is no-.
-feature-list=enable-mail-check-cue,
-	save-will-quote-leading-froms,
-	enable-full-header-cmd
-
-# Pine executes these keys upon startup (e.g. to view msg 13: i,j,1,3,CR,v)
-initial-keystroke-list=
-
-# Only show these headers (by default) when composing messages
-default-composer-hdrs=
-
-# Add these customized headers (and possible default values) when composing
-customized-hdrs=
-
-# When viewing messages, include this list of headers
-viewer-hdrs=
-
-# When viewing messages, number of blank spaces between left display edge and text
-viewer-margin-left=
-
-# When viewing messages, number of blank spaces between right display edge and text
-viewer-margin-right=
-
-# When viewing messages, number of lines of quote displayed before suppressing
-quote-suppression-threshold=
-
-# Determines default folder name for Saves...
-# Choices: default-folder, by-sender, by-from, by-recipient, last-folder-used.
-# Default: "default-folder", i.e. "saved-messages" (Unix) or "SAVEMAIL" (PC).
-saved-msg-name-rule=
-
-# Determines default name for Fcc...
-# Choices: default-fcc, by-recipient, last-fcc-used.
-# Default: "default-fcc" (see also "default-fcc=" variable.)
-fcc-name-rule=
-
-# Sets presentation order of messages in Index. Choices:
-# Subject, From, Arrival, Date, Size, To, Cc, OrderedSubj, Score, and Thread.
-# Order may be reversed by appending /Reverse. Default: "Arrival".
-sort-key=
-
-# Sets presentation order of address book entries. Choices: dont-sort,
-# fullname-with-lists-last, fullname, nickname-with-lists-last, nickname
-# Default: "fullname-with-lists-last".
-addrbook-sort-rule=
-
-# Sets presentation order of folder list entries. Choices: alphabetical,
-# alpha-with-dirs-last, alpha-with-dirs-first.
-# Default: "alpha-with-directories-last".
-folder-sort-rule=
-
-# Sets the default folder and collectionoffered at the Goto Command's prompt.
-goto-default-rule=
-
-# Sets message which cursor begins on. Choices: first-unseen, first-recent,
-# first-important, first-important-or-unseen, first-important-or-recent,
-# first, last. Default: "first-unseen".
-incoming-startup-rule=
-
-# Allows a default answer for the prune folder questions. Choices: yes-ask,
-# yes-no, no-ask, no-no, ask-ask, ask-no. Default: "ask-ask".
-pruning-rule=
-
-# Controls behavior when reopening an already open folder.
-folder-reopen-rule=
-
-# Style that MESSAGE INDEX is displayed in when threading.
-threading-display-style=
-
-# Style of THREAD INDEX or default MESSAGE INDEX when threading.
-threading-index-style=
-
-# When threading, character used to indicate collapsed messages underneath.
-threading-indicator-character=
-
-# When threading, character used to indicate expanded messages underneath.
-threading-expanded-character=
-
-# When threading, character used to indicate this is the last reply
-# to the parent of this message.
-threading-lastreply-character=
-
-# Reflects capabilities of the display you have. Default: US-ASCII.
-# Typical alternatives include ISO-8859-x, (x is a number between 1 and 9).
-character-set=
-
-# Specifies the program invoked by ^_ in the Composer,
-# or the "enable-alternate-editor-implicitly" feature.
-editor=
-
-# Specifies the program invoked by ^T in the Composer.
-speller=
-
-# Specifies the column of the screen where the composer should wrap.
-composer-wrap-column=
-
-# Specifies the string to insert when replying to a message.
-reply-indent-string=
-
-# Specifies the introduction to insert when replying to a message.
-reply-leadin=
-
-# Specifies the string to replace quotes with when viewing a message.
-quote-replace-string=
-
-# Specifies the string to use when sending a  message with no to or cc.
-empty-header-message=
-
-# Program to view images (e.g. GIF or TIFF attachments).
-image-viewer=
-
-# If "user-domain" not set, strips hostname in FROM address. (Unix only)
-use-only-domain-name=
-
-# Full name for bug report address used by "Report Bug" command
-bugs-fullname=Athena Bugs
-
-# Email address used to send bug reports
-bugs-address=bugs@mit.edu
-
-# Program/Script used by "Report Bug" command. No default.
-bugs-additional-data=
-
-# Full name for suggestion address used by "Report Bug" command
-suggest-fullname=Athena Suggestions
-
-# Email address used to send suggestions
-suggest-address=suggest@mit.edu
-
-# Full name for "local support" address used by "Report Bug" command.
-# Default: Local Support
-local-fullname=Athena Consultants
-
-# Email address used to send to "local support".
-# Default: postmaster
-local-address=olc-mail@mit.edu
-
-# Force these address book entries into all writable personal address books.
-# Syntax is   forced-abook-entry=nickname|fullname|address
-# This is a comma-separated list of entries, each with syntax above.
-# Existing entries with same nickname are not replaced.
-# Example: help|Help Desk|help@ourdomain.com
-forced-abook-entry=
-
-# This is a number between 1 and 5.  It is the number of times a user will
-# have to enter a password when they run the keyboard lock command in the
-# main menu.  Default is 1.
-kblock-passwd-count=
-
-# This variable takes a list of programs that message text is piped into
-# after MIME decoding, prior to display.
-display-filters=
-
-# This defines a program that message text is piped into before MIME
-# encoding, prior to sending
-sending-filters=
-
-# A list of alternate addresses the user is known by
-alt-addresses=
-
-# A list of keywords for use in categorizing messages
-keywords=
-
-# Characters which surround keywords in SUBJKEY token.
-# Default is "{" "} "
-keyword-surrounding-chars=
-
-# This is a list of formats for address books.  Each entry in the list is made
-# up of space-delimited tokens telling which fields are displayed and in
-# which order.  See help text
-addressbook-formats=
-
-# This gives a format for displaying the index.  It is made
-# up of space-delimited tokens telling which fields are displayed and in
-# which order.  See help text
-index-format=
-
-# The number of lines of overlap when scrolling through message text
-viewer-overlap=
-
-# Number of lines from top and bottom of screen where single
-# line scrolling occurs.
-scroll-margin=
-
-# The number of seconds to sleep after writing a status message
-status-message-delay=
-
-# The approximate number of seconds between checks for new mail
-mail-check-interval=
-
-# The approximate number of seconds between checks for new mail in folders
-# other than the current folder and inbox.
-# Default is same as mail-check-interval
-mail-check-interval-noncurrent=
-
-# The minimum number of seconds between checks for new mail in a Mail Drop.
-# This is always effectively at least as large as the mail-check-interval
-maildrop-check-minimum=
-
-# For newsgroups accessed using NNTP, only messages numbered in the range
-# lastmsg-range+1 to lastmsg will be considered
-nntp-range=
-
-# Full path and name of NEWSRC file
-newsrc-path=
-
-# Path and filename of news configuration's active file.
-# The default is typically "/usr/lib/news/active".
-news-active-file-path=
-
-# Directory containing system's news data.
-# The default is typically "/var/spool/news"
-news-spool-directory=
-
-# Path and filename of the program used to upload text from your terminal
-# emulator's into Pine's composer.
-upload-command=
-
-# Text sent to terminal emulator prior to invoking the program defined by
-# the upload-command variable.
-# Note: _FILE_ will be replaced with the temporary file used in the upload.
-upload-command-prefix=
-
-# Path and filename of the program used to download text via your terminal
-# emulator from Pine's export and save commands.
-download-command=
-
-# Text sent to terminal emulator prior to invoking the program defined by
-# the download-command variable.
-# Note: _FILE_ will be replaced with the temporary file used in the downlaod.
-download-command-prefix=
-
-# Sets the search path for the mailcap configuration file.
-# NOTE: colon delimited under UNIX, semi-colon delimited under DOS/Windows/OS2.
-mailcap-search-path=
-
-# Sets the search path for the mimetypes configuration file.
-# NOTE: colon delimited under UNIX, semi-colon delimited under DOS/Windows/OS2.
-mimetype-search-path=
-
-# List of programs to open Internet URLs (e.g. http or ftp references).
-url-viewers=/usr/bin/sensible-browser
-
-# The maximum number of non-stayopen remote connections that pine will use
-max-remote-connections=
-
-# A list of folders that should be left open once opened (INBOX is implicit)
-stay-open-folders=
-
-# Specifies the number of dead letter files to keep when canceling.
-dead-letter-files=
-
-# Sets the filename for the newmail fifo (named pipe). Unix only.
-newmail-fifo-path=
-
-# Sets the width for the NewMail screen.
-newmail-window-width=
-
-# List of incoming msg folders besides INBOX, e.g. ={host2}inbox, {host3}inbox
-# Syntax: optnl-label {optnl-imap-host-name}folder-path
-incoming-folders=
-
-# Pine compares this value with the first folder collection directory.
-# If they match (or no folder collections are defined), and the directory
-# does not exist, Pine will create and use it. Default: ~/mail
-mail-directory=
-
-# List of directories where saved-message folders may be. First one is
-# the default for Saves. Example: Main {host1}mail/[], Desktop mail\[]
-# Syntax: optnl-label {optnl-imap-hostname}optnl-directory-path[]
-folder-collections="MIT Mail" {mit.edu/hesiod/imap}INBOX.[]
-
-# List, only needed if nntp-server not set, or news is on a different host
-# than used for NNTP posting. Examples: News *[] or News *{host3/nntp}[]
-# Syntax: optnl-label *{news-host/protocol}[]
-news-collections=
-
-# List of file or path names for personal addressbook(s).
-# Default: ~/.addressbook (Unix) or \PINE\ADDRBOOK (PC)
-# Syntax: optnl-label path-name
-address-book=
-
-# List of file or path names for global/shared addressbook(s).
-# Default: none
-# Syntax: optnl-label path-name
-global-address-book=
-
-# The system wide standard printers
-standard-printer=
-
-# This names the path to an alternative program, and any necessary arguments,
-# to be used in posting mail messages.  Example:
-#                    /usr/lib/sendmail -oem -t -oi
-# or,
-#                    /usr/local/bin/sendit.sh
-# The latter a script found in Pine distribution's contrib/util directory.
-# NOTE: The program MUST read the message to be posted on standard input,
-#       AND operate in the style of sendmail's "-t" option.
-sendmail-path=/usr/lib/debathena-msmtp -t
-
-# This names the root of the tree to which the user is restricted when reading
-# and writing folders and files.  For example, on Unix ~/work confines the
-# user to the subtree beginning with their work subdirectory.
-# (Note: this alone is not sufficient for preventing access.  You will also
-# need to restrict shell access and so on, see Pine Technical Notes.)
-# Default: not set (so no restriction)
-operating-dir=
-
-# If no user input for this many hours, Pine will exit if in an idle loop
-# waiting for a new command.  If set to zero (the default), then there will
-# be no timeout.
-user-input-timeout=
-
-# Sets the time in seconds that Pine will attempt to open a network
-# connection.  The default is 30, the minimum is 5, and the maximum is
-# system defined (typically 75).
-tcp-open-timeout=
-
-# Network read warning timeout. The default is 15, the minimum is 5, and the
-# maximum is 1000.
-tcp-read-warning-timeout=
-
-# Network write warning timeout. The default is 0 (unset), the minimum
-# is 5 (if not 0), and the maximum is 1000.
-tcp-write-warning-timeout=
-
-# If this much time has elapsed at the time of a tcp read or write
-# timeout, pine will ask if you want to break the connection.
-# Default is 60 seconds, minimum is 5, maximum is 1000.
-tcp-query-timeout=
-
-# Sets the format of the command used to open a UNIX remote
-# shell connection.  The default is "%s %s -l %s exec /etc/r%sd"
-# NOTE: the 4 (four) "%s" entries MUST exist in the provided command
-# where the first is for the command's path, the second is for the
-# host to connect to, the third is for the user to connect as, and the
-# fourth is for the connection method (typically "imap")
-rsh-command=
-
-# Sets the name of the command used to open a UNIX remote shell connection.
-# The default is typically /usr/ucb/rsh.
-rsh-path=
-
-# Sets the time in seconds that Pine will attempt to open a UNIX remote
-# shell connection.  The default is 15, min is 5, and max is unlimited.
-# Zero disables rsh altogether.
-rsh-open-timeout=0
-
-# Sets the format of the command used to open a UNIX secure
-# shell connection.  The default is "%s %s -l %s exec /etc/r%sd"
-# NOTE: the 4 (four) "%s" entries MUST exist in the provided command
-# where the first is for the command's path, the second is for the
-# host to connect to, the third is for the user to connect as, and the
-# fourth is for the connection method (typically "imap")
-ssh-command=
-
-# Sets the name of the command used to open a UNIX secure shell connection.
-# Typically this is /usr/bin/ssh.
-ssh-path=
-
-# Sets the time in seconds that Pine will attempt to open a UNIX secure
-# shell connection.  The default is 15, min is 5, and max is unlimited.
-# Zero disables ssh altogether.
-ssh-open-timeout=0
-
-# Sets the version number Pine will use as a threshold for offering
-# its new version message on startup.
-# (Athena hack: 'z' should be lexically greater than any pine version.)
-new-version-threshold=z
-
-# List of mail drivers to disable.
-disable-these-drivers=
-
-# List of SASL authenticators to disable.
-disable-these-authenticators=
-
-# How many extra copies of remote address book should be kept. Default: 3
-remote-abook-history=
-
-# Minimum number of minutes between checks for remote address book changes.
-# 0 means never check except when opening a remote address book.
-# -1 means never check. Default: 5
-remote-abook-validity=
-
-# Your default printer selection
-printer=
-
-# List of special print commands
-personal-print-command=
-
-# Patterns and their actions are stored here.
-patterns-roles=
-
-# Patterns and their actions are stored here.
-patterns-filters2=
-
-# Patterns and their actions are stored here.
-patterns-scores2=
-
-# Patterns and their actions are stored here.
-patterns-indexcolors=
-
-# Patterns and their actions are stored here.
-patterns-other=
-
-# Controls display of color
-color-style=
-
-# Controls display of color for current index line
-current-indexline-style=
-
-# Controls display of color for the titlebar at top of screen
-titlebar-color-style=
-
-# Choose: black, blue, green, cyan, red, magenta, yellow, or white.
-normal-foreground-color=
-normal-background-color=
-reverse-foreground-color=
-reverse-background-color=
-title-foreground-color=
-title-background-color=
-status-foreground-color=
-status-background-color=
-keylabel-foreground-color=
-keylabel-background-color=
-keyname-foreground-color=
-keyname-background-color=
-selectable-item-foreground-color=
-selectable-item-background-color=
-quote1-foreground-color=
-quote1-background-color=
-quote2-foreground-color=
-quote2-background-color=
-quote3-foreground-color=
-quote3-background-color=
-signature-foreground-color=
-signature-background-color=
-prompt-foreground-color=
-prompt-background-color=
-index-to-me-foreground-color=
-index-to-me-background-color=
-index-important-foreground-color=
-index-important-background-color=
-index-deleted-foreground-color=
-index-deleted-background-color=
-index-answered-foreground-color=
-index-answered-background-color=
-index-new-foreground-color=
-index-new-background-color=
-index-recent-foreground-color=
-index-recent-background-color=
-index-unseen-foreground-color=
-index-unseen-background-color=
-index-arrow-foreground-color=
-index-arrow-background-color=
-
-# When viewing messages, these are the header colors
-viewer-hdr-colors=
-
-# Colors used to display keywords in the index
-keyword-colors=
-
-# LDAP servers for looking up addresses.
-ldap-servers=
