@@ -2,8 +2,9 @@ debathena-alpine-config (1.5) unstable; urgency=low
 
   * Depend on alpine instead of only recommending it.
   * Revert 1.4; this is being handled upstream.
+  * Use DEB_TRANSFORM_FILES to isolate our changes to the default config.
 
- -- Evan Broder <broder@mit.edu>  Fri, 13 Mar 2009 23:51:38 -0400
+ -- Evan Broder <broder@mit.edu>  Sat, 14 Mar 2009 00:41:22 -0400
 
 debathena-alpine-config (1.4) unstable; urgency=low
 
